--- a/src/main/java/br/ufes/usuarios/view/ManterUsuarioView.form
+++ b/src/main/java/br/ufes/usuarios/view/ManterUsuarioView.form
@@ -29,12 +29,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanel1" alignment="0" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -74,13 +74,13 @@
                               <Component id="lblSenha" alignment="0" min="-2" pref="74" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtUsuario" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                                      <Component id="txtSenha" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                                      <Component id="txtUsuario" min="-2" pref="233" max="-2" attributes="0"/>
+                                      <Component id="txtSenha" min="-2" pref="233" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="chkAdm" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
@@ -90,7 +90,7 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <Component id="txtNome" max="32767" attributes="0"/>
+                              <Component id="txtNome" min="-2" pref="458" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -119,7 +119,7 @@
                       <Component id="txtSenha" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="chkAdm" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="80" max="32767" attributes="0"/>
+                  <EmptySpace pref="43" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnFechar" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="btnSalvar" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
