--- a/src/main/java/br/ufes/usuarios/view/ManterNotificacaoView.form
+++ b/src/main/java/br/ufes/usuarios/view/ManterNotificacaoView.form
@@ -61,6 +61,8 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="btnFechar" min="-2" pref="100" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
+                          <Component id="btnExcluir" min="-2" pref="100" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnRecusar" min="-2" pref="100" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnAprovar" min="-2" pref="100" max="-2" attributes="0"/>
@@ -117,12 +119,13 @@
                       <Component id="lblMensagem" min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="57" max="32767" attributes="0"/>
+                  <EmptySpace pref="59" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnFechar" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="btnEnviar" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="btnAprovar" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                       <Component id="btnRecusar" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
+                      <Component id="btnExcluir" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -293,6 +296,22 @@
               <Image iconType="3" name="/images/facebook_dislike_30px.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Recusar"/>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                <EmptyBorder bottom="5" left="5" right="5" top="5"/>
+              </Border>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnExcluir">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/trash_30px.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Excluir"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
                 <EmptyBorder bottom="5" left="5" right="5" top="5"/>
