--- a/src/main/java/br/ufes/usuarios/view/BuscarNotificacaoView.form
+++ b/src/main/java/br/ufes/usuarios/view/BuscarNotificacaoView.form
@@ -122,11 +122,7 @@
                   <Font name="Segoe UI" size="12" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="0">
-                    <Column editable="false" title="Id" type="java.lang.Object"/>
-                    <Column editable="false" title="T&#xed;tulo" type="java.lang.Object"/>
-                    <Column editable="false" title="Data Cadastro" type="java.lang.Object"/>
-                  </Table>
+                  <Table columnCount="0" rowCount="0"/>
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
